Updated Individual Registration to send correct data

--- a/hackathon/webapp/templates/webapp/individualregistration.html
+++ b/hackathon/webapp/templates/webapp/individualregistration.html
@@ -73,13 +73,13 @@
         <h4 class="form-title">Team Details</h4>
 
         <div class="form-group">
-            <input type="text" class="form-control" id="teamName" placeholder="Team Name" required="false"
+            <input type="text" class="form-control" id="teamName" placeholder="Team Name" required
                    name="teamName">
         </div>
 
         <div class="form-group">
-            <input type="text" class="form-control" id="Team Email-Address" placeholder="Email for correspondence"
-                   required="false" name="teamEmail">
+            <input type="email" class="form-control" id="Team Email-Address" placeholder="Email for correspondence"
+                   required name="teamEmail">
         </div>
 
         <h4 class="form-title">Member Details</h4>
@@ -150,25 +150,25 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="specialization"
-                                           placeholder="Specialization" required="false" name="specialization">
+                                           placeholder="Specialization" required="true" name="specialization">
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="address1" placeholder="Address Line 1"
-                                           required="false" name="addressLine1">
+                                           required="true" name="addressLine1">
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="address2" placeholder="Address Line 2"
-                                           required="false" name="addressLine2">
+                                           required="true" name="addressLine2">
                                 </div>
 
                                 <div class="form-row">
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="pincode" placeholder="Pincode"
-                                               required="false" name="pincode">
+                                               required="true" name="pincode">
                                     </div>
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="city" placeholder="City"
-                                               required="false" name="city">
+                                               required="true" name="city">
                                     </div>
                                 </div>
 
