--- a/hackathon/webapp/templates/webapp/contactus.html
+++ b/hackathon/webapp/templates/webapp/contactus.html
@@ -103,43 +103,40 @@
 		</div>	 -->
 	</nav>	
 
-	<div style="margin-top: 40px;">
-		<h1 id="aboutus-title">About Us</h1>
+	<div style="margin-top: 30px; margin-bottom: 20px;">
+		<h1 id="contactus-title">Contact Us</h1>
 	</div>
 
-	<div class="container" style="margin-top: 50px; margin-bottom: 50px;">
-		<div class="row aboutus-div">
-			<div class="col-4 aboutus-img">
-				<img src="../../static/webapp/imgs/TataMotorsLogo.svg" width="250px">
+	<div class="container" style="margin-bottom: 20px;">
+		<div class="row" style="font-family: 'Open Sans">
+			<div class="col-6">
+				<div class="mapouter" style="text-align: left;"><div class="gmap_canvas"><iframe width="500" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=symbiosis%20institute%20of%20technology&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>				
 			</div>
-			<div class="col-8 aboutus-content">
-				<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
-			</div>
-		</div>
-		<div class="row aboutus-div">
-			<div class="col-4 aboutus-img">
-				<img src="../../static/webapp/imgs/SIT_Logo_new.png" width="250px">
-			</div>
-			<div class="col-8 aboutus-content">
-				<p>Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
-			</div>
-		</div>
-		<div class="row aboutus-div">
-			<div class="col-4  aboutus-img">
-				<img src="../../static/webapp/imgs/SCEI_4.png" width="350px">
-			</div>
-			<div class="col-8 aboutus-content">
-				<br>
-				<p>Symbiosis Centre for Entrepreneurship and Innovation (SCEI) is a Government recognized and funded startup-incubator (TBI). SCEI is founded and funded by the highly acclaimed Symbiosis International (Deemed University)</p>
-			</div>
-		</div>
-		<div class="row aboutus-div">
-			<div class="col-4 aboutus-img">
-				<img src="../../static/webapp/imgs/symbiosislogo.png" width="80px" style="margin-top: 20px;">
-			</div>
-			<div class="col-8 aboutus-content">
-				<p>Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI (machine learning, deep learning, probabilistic reasoning etc.), application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry.  
-				</p>
+			<div class="col-6 v-center">
+				<div class="row" style="display: block;">
+					<h2 style="font-weight: 600;">Symbiosis Institute of Technology</h2>
+					<p style="font-size: 14px;">Symbiosis International University
+												<br>Near Lupin Research Park
+												<br>Gram: Lavale
+												<br>Tal: Mulshi
+												<br>Maharashtra - 412115
+					</p>
+					<!-- <p style="font-size: 14px;">Symbiosis International University</p>
+					<p style="font-size: 14px;">Near Lupin Research Park
+					<p style="font-size: 14px;">Gram: Lavale Tal, Mulshi, Maharashtra 412115</p> -->
+				</div>
+				<div class="row" style="display: block;">
+					<h4 style="font-weight: 600; margin-bottom: 10px;">For any queries: </h4>
+					<p style="font-size: 14px;">Hema Karande</p>
+					<p style="font-size: 14px;">
+						Phone: +91 9511902710
+						<br>Timing: 9:30 AM - 12:30 PM
+						<br>Email: <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a>
+					</p>
+					<!-- <p style="font-size: 14px;"><span style="color: #c4c4c4;">Phone:</span> +91 9511902710</p>
+					<p style="font-size: 14px;">T<span style="color: #c4c4c4;">iming:</span> 9:30 AM - 12:30 PM</p>
+					<p style="font-size: 14px;"><span style="color: #c4c4c4;">Email:</span> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">aihackathon@sitpune.edu.in</a></p> -->
+				</div>
 			</div>
 		</div>
 	</div>
@@ -208,5 +205,64 @@
 			})
 		})
 </script>
+
+<!-- GOOGLE MAPS SCRIPT -->
+
+<!-- <script type="text/javascript">
+	$( document ).ready( function() {
+
+		$('body').noisy({
+		    intensity: 0.2,
+		    size: 200,
+		    opacity: 0.28,
+		    randomColors: false, // true by default
+		    color: '#000000'
+		});
+		  
+			//Google Maps JS
+			//Set Map
+			function initialize() {
+					var myLatlng = new google.maps.LatLng(53.3333,-3.08333);
+					var imagePath = 'http://m.schuepfen.ch/icons/helveticons/black/60/Pin-location.png'
+					var mapOptions = {
+						zoom: 11,
+						center: myLatlng,
+						mapTypeId: google.maps.MapTypeId.ROADMAP
+					}
+
+				var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+				//Callout Content
+				var contentString = 'Some address here..';
+				//Set window width + content
+				var infowindow = new google.maps.InfoWindow({
+					content: contentString,
+					maxWidth: 500
+				});
+
+				//Add Marker
+				var marker = new google.maps.Marker({
+					position: myLatlng,
+					map: map,
+					icon: imagePath,
+					title: 'image title'
+				});
+
+				google.maps.event.addListener(marker, 'click', function() {
+					infowindow.open(map,marker);
+				});
+
+				//Resize Function
+				google.maps.event.addDomListener(window, "resize", function() {
+					var center = map.getCenter();
+					google.maps.event.trigger(map, "resize");
+					map.setCenter(center);
+				});
+			}
+
+			google.maps.event.addDomListener(window, 'load', initialize);
+
+	});
+</script> -->
+
 </body>
 </html>
