--- a/hackathon/webapp/templates/webapp/privacy.html
+++ b/hackathon/webapp/templates/webapp/privacy.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="../../static/app/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../static/webapp/styles.css">
 	<script>document.getElementsByTagName("html")[0].className +" js";</script>
 	<!-- Timeline CSS -->
 	<!-- <link rel="stylesheet" type="text/css" href="../../static/app/timeline.css"> -->
@@ -35,33 +35,65 @@
 	</script>
 
 	<!-- NAVBAR -->
-	<nav class="navbar navbar-expand-lg sticky-top navbar-registration">
-		<div class="collapse navbar-collapse justify-content-start" style="margin-left: 20px;">
-			<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">		
+	<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
+		<div class="logoBar">
+			<div class="container-fluid">
+				<div class="row" style="justify-content: space-around; padding-top: 10px;">
+					<div class="col-4" style="text-align: start;">
+						<a href="https://www.tatamotors.com/">
+							<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">							
+						</a>
+					</div>
+					<div class="col-4" style="text-align: center;">
+						<a href="https://www.sitpune.edu.in/">
+							<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px;">
+							<img src="../../static/webapp/imgs/SIT_Logo_new.png" style="height: 50px;">
+						</a>
+					</div>
+					<div class="col-4" style="text-align: end;">
+						<a href="https://www.tata.com/">
+							<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+						</a>
+					</div>
+				</div>
+				<div class="row" style="margin-top: 5px;">
+					<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+					    <ul class="navbar-nav navbar-custom">
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="{% url 'index' %}">Home</a>
+					      </li>
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="{% url 'about_us' %}">About Us</a>
+					      </li>
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="{% url 'contact_us' %}">Contact Us</a>
+					      </li>
+					    </ul>
+					</div>	
+				</div>
+			</div>
 		</div>
-		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+		<!-- <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="landing.html">Home</a>
+		        <a class="nav-link" id="link-color" href="landing.html">Home</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="aboutus.html">About Us</a>
+		        <a class="nav-link" id="link-color" href="aboutus.html">About Us</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="contactus.html">Contact Us</a>
+		        <a class="nav-link" id="link-color" href="contactus.html">Contact Us</a>
 		      </li>
 		    </ul>
-		</div>
-	</nav>
+		</div>	 -->
+	</nav>	
 
 	<div style="margin-top: 70px;">
 		<h1 id="privacy-title">Privacy Policy</h1>
 	</div>
 
 	<section class="row" style="max-width: 100%; text-align: justify; margin-bottom: 30px;">
-          <div class="container">
+        <div class="container">
             <div class="row">
               <div id="singlepagecontent" class="col-sm-12">
                    <!--  <p></p><p><strong>Group Technology &amp; Innovation Office, Tata Sons Limited</strong><br>
@@ -166,27 +198,27 @@
 					<p><strong>Changes to privacy policy</strong></p>
 					<p>Our Policy may change from time to time. We will post any changes or update to this Policy on this webpage and, if the changes are significant, we will provide a more prominent notice (including, for certain services, email notification of Policy changes). We will also keep prior versions of thisPolicy in an archive for your review.</p>
 					<p></p>
-					</div>
 				</div>
-	        </div>
+			</div>
+	    </div>
 	</section>
 
-    	<div class="footer">
+   	<div class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-4">
 					<div class="follow">
 						<p>Help Desk</p>
-						<p id="code">Still got some queries? Mail us at <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">aihackathon@sitpune.edu.in</a></p>						
+						<p id="code">Still got some queries? Mail us at <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a></p>						
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="follow text-center">
 						<p>Follow Us On</p>
-						<!-- <img src="../../static/app/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/app/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/app/imgs/linkedin.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/app/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;"> -->
+						<!-- <img src="../../static/webapp/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/webapp/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/webapp/imgs/linkedin.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/webapp/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;"> -->
 						<i class="lni-facebook" style="font-size: 25px; margin-right: 10px;"></i>
 						<i class="lni-instagram" style="font-size: 25px; margin-right: 10px;"></i>
 						<i class="lni-twitter" style="font-size: 25px; margin-right: 10px;"></i>
@@ -196,16 +228,16 @@
 					<div class="follow text-center">
 						<p>Quick Links</p>
 						<ul class="footer-link">
-							<li><a href="landing.html">Home</a></li>
-							<li><a href="aboutus.html">About Us</a></li>
-							<li><a href="contactus.html">Contact Us</a></li>
+							<li><a href="{% url 'index' %}">Home</a></li>
+							<li><a href="{% url 'about_us' %}">About Us</a></li>
+							<li><a href="{% url 'contact_us' %}">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-2">
-					<p style="margin-bottom: 0;"><a href="privacy.html" id="privacy">Privacy policy</a></p>
+					<p style="margin-bottom: 0;"><a href="{% url 'privacy_policy' %}" id="privacy">Privacy policy</a></p>
 				</div>
 			</div>
 			<hr>
