--- a/hackathon/webapp/templates/webapp/registration.html
+++ b/hackathon/webapp/templates/webapp/registration.html
@@ -20,33 +20,63 @@
 	<link href="https://fonts.googleapis.com/css?family=Oxygen+Mono&display=swap" rel="stylesheet">
 	<!-- Overpass Mono Font -->
 	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono&display=swap" rel="stylesheet">
+	<link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<!-- NAVBAR -->
-	<nav class="navbar navbar-expand-lg sticky-top navbar-registration">
-		<div class="collapse navbar-collapse justify-content-start" style="margin-left: 20px;">
-			<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
-			<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">		
+	<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
+		<div class="logoBar">
+			<div class="container-fluid">
+				<div class="row" style="justify-content: space-around; padding-top: 10px;">
+					<div class="col-4" style="text-align: start;">
+						<a href="https://www.tatamotors.com/">
+							<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">							
+						</a>
+					</div>
+					<div class="col-4" style="text-align: center;">
+						<a href="https://www.sitpune.edu.in/">
+							<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px;">
+							<img src="../../static/webapp/imgs/SIT_Logo_new.png" style="height: 50px;">
+						</a>
+					</div>
+					<div class="col-4" style="text-align: end;">
+						<a href="https://www.tata.com/">
+							<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+						</a>
+					</div>
+				</div>
+				<div class="row" style="margin-top: 5px;">
+					<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+					    <ul class="navbar-nav navbar-custom">
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="{% url 'index' %}">Home</a>
+					      </li>
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="{% url 'about_us' %}">About Us</a>
+					      </li>
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="{% url 'contact_us' %}">Contact Us</a>
+					      </li>
+					    </ul>
+					</div>	
+				</div>
+			</div>
 		</div>
-		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+		<!-- <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">Home</a>
+		        <a class="nav-link" id="link-color" href="landing.html">Home</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">About Us</a>
+		        <a class="nav-link" id="link-color" href="aboutus.html">About Us</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">Contact Us</a>
-		      </li>
-		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">Know More</a>
+		        <a class="nav-link" id="link-color" href="contactus.html">Contact Us</a>
 		      </li>
 		    </ul>
-		</div>
-	</nav>	
+		</div>	 -->
+	</nav>			
 
 	<div style="margin-top: 70px;">
 		<h1 id="event-registration-title">Hackathon Registration</h1>
@@ -77,6 +107,49 @@
 		</div>
 	</div>
 
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-4">
+					<div class="follow">
+						<p>Help Desk</p>
+						<p id="code">Still got some queries? Mail us at <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a></p>						
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="follow text-center">
+						<p>Follow Us On</p>
+						<!-- <img src="../../static/webapp/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/webapp/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/webapp/imgs/linkedin.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/webapp/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;"> -->
+						<i class="lni-facebook" style="font-size: 25px; margin-right: 10px;"></i>
+						<i class="lni-instagram" style="font-size: 25px; margin-right: 10px;"></i>
+						<i class="lni-twitter" style="font-size: 25px; margin-right: 10px;"></i>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="follow text-center">
+						<p>Quick Links</p>
+						<ul class="footer-link">
+							<li><a href="{% url 'index' %}">Home</a></li>
+							<li><a href="{% url 'about_us' %}">About Us</a></li>
+							<li><a href="{% url 'contact_us' %}">Contact Us</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-2">
+					<p style="margin-bottom: 0;"><a href="{% url 'privacy_policy' %}" id="privacy">Privacy policy</a></p>
+				</div>
+			</div>
+			<hr>
+			<div class="row" id="footer-note">
+				<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
+			</div>
+		</div>
+	</div>
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
