--- a/hackathon/webapp/static/webapp/styles.css
+++ b/hackathon/webapp/static/webapp/styles.css
@@ -669,3 +669,37 @@ hr{
 .v-center{
 	margin-top: 80px;
 }
+
+#modalTnC{
+	/*display: block !important;*/
+}
+
+.TnCform{
+	margin: 0 auto; 
+	margin-top: 40px;
+	margin-bottom: 40px;
+	max-width: 700px;
+	overflow-y: initial !important
+}
+
+#proceedBtn{
+	display: inline-block;
+	margin-top: 20px;
+	justify-content: center;
+	float: right;
+}
+
+#declineBtn{
+	float: left;
+	margin-top: 20px;
+}
+
+#modalTncBody{
+	height: 600px;
+    overflow-y: auto;
+    margin-bottom: 20px;
+}
+
+.hideButton{
+	display: none;
+}
