--- a/hackathon/webapp/templates/webapp/contactus.html
+++ b/hackathon/webapp/templates/webapp/contactus.html
@@ -169,6 +169,7 @@
 							<li><a href="{% url 'index' %}">Home</a></li>
 							<li><a href="{% url 'about_us' %}">About Us</a></li>
 							<li><a href="{% url 'contact_us' %}">Contact Us</a></li>
+							<li><a href="{% url 'registration' %}">Register</a></li>
 						</ul>
 					</div>
 				</div>
