--- a/hackathon/webapp/templates/webapp/aboutus.html
+++ b/hackathon/webapp/templates/webapp/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AIHackathon</title>
+	<title>AIHackathon - About Us</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
@@ -34,74 +34,8 @@
 		$.scoped();	
 	</script>
 
-	<!-- <div class="logoBar">
-		<div class="container-fluid">
-			<div class="row" style="justify-content: space-around; padding-top: 10px;">
-				<div class="col-3" style="text-align: start;">
-					<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
-				</div>
-				<div class="col-3" style="text-align: center;">
-					<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
-				</div>
-				<div class="col-3" style="text-align: end;">
-					<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
-				</div>
-			</div>
-		</div>
-	</div> -->
 	<!-- NAVBAR -->
-	<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
-		<div class="logoBar">
-			<div class="container-fluid">
-				<div class="row" style="justify-content: space-around; padding-top: 10px;">
-					<div class="col-4" style="text-align: start;">
-						<a href="https://www.tatamotors.com/">
-							<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">							
-						</a>
-					</div>
-					<div class="col-4" style="text-align: center;">
-						<a href="https://www.sitpune.edu.in/">
-							<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px;">
-							<img src="../../static/webapp/imgs/SIT_Logo_new.png" style="height: 50px;">
-						</a>
-					</div>
-					<div class="col-4" style="text-align: end;">
-						<a href="https://www.tata.com/">
-							<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
-						</a>
-					</div>
-				</div>
-				<div class="row" style="margin-top: 5px;">
-					<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-					    <ul class="navbar-nav navbar-custom">
-					      <li class="nav-item nav-item-link">
-					        <a class="nav-link" id="link-color" href="{% url 'index' %}">Home</a>
-					      </li>
-					      <li class="nav-item nav-item-link">
-					        <a class="nav-link" id="link-color" href="{% url 'about_us' %}">About Us</a>
-					      </li>
-					      <li class="nav-item nav-item-link">
-					        <a class="nav-link" id="link-color" href="{% url 'contact_us' %}">Contact Us</a>
-					      </li>
-					    </ul>
-					</div>	
-				</div>
-			</div>
-		</div>
-		<!-- <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-		    <ul class="navbar-nav navbar-custom">
-		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="landing.html">Home</a>
-		      </li>
-		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="aboutus.html">About Us</a>
-		      </li>
-		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="contactus.html">Contact Us</a>
-		      </li>
-		    </ul>
-		</div>	 -->
-	</nav>	
+	{% include "webapp/navbar.html" %}	
 
 	<div style="margin-top: 40px;">
 		<h1 id="aboutus-title">About Us</h1>
@@ -109,85 +43,50 @@
 
 	<div class="container" style="margin-top: 50px; margin-bottom: 50px;">
 		<div class="row aboutus-div">
-			<div class="col-4 aboutus-img">
-				<img src="../../static/webapp/imgs/TataMotorsLogo.svg" width="250px">
-			</div>
-			<div class="col-8 aboutus-content">
-				<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
-			</div>
+			<a href="https://www.tatamotors.com/" class="aboutus-links">
+				<div class="col-4 aboutus-img">
+					<img src="../../static/webapp/imgs/TataMotorsLogo.svg" width="250px">
+				</div>
+				<div class="col-8 aboutus-content">
+					<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
+				</div>
+			</a>
 		</div>
 		<div class="row aboutus-div">
-			<div class="col-4 aboutus-img">
-				<img src="../../static/webapp/imgs/SIT_Logo_new.png" width="250px">
-			</div>
-			<div class="col-8 aboutus-content">
-				<p>Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
-			</div>
+			<a href="https://www.sitpune.edu.in/" class="aboutus-links">
+				<div class="col-4 aboutus-img">
+					<img src="../../static/webapp/imgs/SIT_Logo_new.png" width="250px">
+				</div>
+				<div class="col-8 aboutus-content">
+					<p>Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
+				</div>
+			</a>
 		</div>
 		<div class="row aboutus-div">
-			<div class="col-4  aboutus-img">
-				<img src="../../static/webapp/imgs/SCEI_4.png" width="350px">
-			</div>
-			<div class="col-8 aboutus-content">
-				<br>
-				<p>Symbiosis Centre for Entrepreneurship and Innovation (SCEI) is a Government recognized and funded startup-incubator (TBI). SCEI is founded and funded by the highly acclaimed Symbiosis International (Deemed University)</p>
-			</div>
+			<a href="http://www.scei.org.in/" class="aboutus-links">
+				<div class="col-4 aboutus-img">
+					<img src="../../static/webapp/imgs/SCEI_4.png" width="350px">
+				</div>
+				<div class="col-8 aboutus-content">
+					<br>
+					<p>Symbiosis Centre for Entrepreneurship and Innovation (SCEI) is a Government recognized and funded startup-incubator (TBI). SCEI is founded and funded by the highly acclaimed Symbiosis International (Deemed University)</p>
+				</div>
+			</a>
 		</div>
 		<div class="row aboutus-div">
-			<div class="col-4 aboutus-img">
-				<img src="../../static/webapp/imgs/symbiosislogo.png" width="80px" style="margin-top: 20px;">
-			</div>
-			<div class="col-8 aboutus-content">
-				<p>Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI (machine learning, deep learning, probabilistic reasoning etc.), application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry.  
-				</p>
-			</div>
+			<a href="https://www.sitpune.edu.in/" class="aboutus-links">
+				<div class="col-4 aboutus-img">
+					<img src="../../static/webapp/imgs/symbiosislogo.png" width="80px" style="margin-top: 20px;">
+				</div>
+				<div class="col-8 aboutus-content">
+					<p>Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI (machine learning, deep learning, probabilistic reasoning etc.), application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry.  
+					</p>
+				</div>
+			</a>
 		</div>
 	</div>
 
-	<div class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-4">
-					<div class="follow">
-						<p>Help Desk</p>
-						<p id="code">Still got some queries? Mail us at <a href="mailto:aihackathon@sitpune.edu.in?Subject=Hackathon%20Query" target="_top">aihackathon@sitpune.edu.in</a></p>						
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="follow text-center">
-						<p>Follow Us On</p>
-						<!-- <img src="../../static/webapp/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/webapp/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/webapp/imgs/linkedin.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/webapp/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;"> -->
-						<i class="lni-facebook" style="font-size: 25px; margin-right: 10px;"></i>
-						<i class="lni-instagram" style="font-size: 25px; margin-right: 10px;"></i>
-						<i class="lni-twitter" style="font-size: 25px; margin-right: 10px;"></i>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="follow text-center">
-						<p>Quick Links</p>
-						<ul class="footer-link">
-							<li><a href="{% url 'index' %}">Home</a></li>
-							<li><a href="{% url 'about_us' %}">About Us</a></li>
-							<li><a href="{% url 'contact_us' %}">Contact Us</a></li>
-							<li><a href="{% url 'registration' %}">Register</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-2">
-					<p style="margin-bottom: 0;"><a href="{% url 'privacy_policy' %}" id="privacy">Privacy policy</a></p>
-				</div>
-			</div>
-			<hr>
-			<div class="row" id="footer-note">
-				<p>©2019. Designed by SIT Final Year CS Students Arpan Srivastava & Ryan Miranda.</p>
-			</div>
-		</div>
-	</div>
+	{% include "webapp/footer.html" %}
 
 <!-- Bootstrap JS -->
 <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
