--- a/hackathon/webapp/templates/webapp/aboutus.html
+++ b/hackathon/webapp/templates/webapp/aboutus.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>AIHackathon - About Us</title>
+	{% load static %}
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
@@ -45,7 +46,7 @@
 		<div class="row aboutus-div">
 			<a href="https://www.tatamotors.com/" class="aboutus-links">
 				<div class="col-4 aboutus-img">
-					<img src="../../static/webapp/imgs/TataMotorsLogo.svg" width="250px">
+					<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" width="250px">
 				</div>
 				<div class="col-8 aboutus-content">
 					<p>Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
@@ -55,7 +56,7 @@
 		<div class="row aboutus-div">
 			<a href="https://www.sitpune.edu.in/" class="aboutus-links">
 				<div class="col-4 aboutus-img">
-					<img src="../../static/webapp/imgs/SIT_Logo_new.png" width="250px">
+					<img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" width="250px">
 				</div>
 				<div class="col-8 aboutus-content">
 					<p>Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
@@ -65,7 +66,7 @@
 		<div class="row aboutus-div">
 			<a href="http://www.scei.org.in/" class="aboutus-links">
 				<div class="col-4 aboutus-img">
-					<img src="../../static/webapp/imgs/SCEI_4.png" width="350px">
+					<img src="{% static 'webapp/imgs/SCEI_4.png' %}" width="350px">
 				</div>
 				<div class="col-8 aboutus-content">
 					<br>
@@ -76,7 +77,7 @@
 		<div class="row aboutus-div">
 			<a href="https://www.sitpune.edu.in/" class="aboutus-links">
 				<div class="col-4 aboutus-img">
-					<img src="../../static/webapp/imgs/symbiosislogo.png" width="80px" style="margin-top: 20px;">
+					<img src="{% static 'webapp/imgs/symbiosislogo.png' %}" width="80px" style="margin-top: 20px;">
 				</div>
 				<div class="col-8 aboutus-content">
 					<p>Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI (machine learning, deep learning, probabilistic reasoning etc.), application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry.  
