--- a/hackathon/webapp/templates/webapp/contactus.html
+++ b/hackathon/webapp/templates/webapp/contactus.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>AIHackathon - Contact Us</title>
+	{% load static %}
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS-->
@@ -94,67 +95,9 @@
 				var $link = $(".nav-link");
 				$nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
 				// $link.toggleClass("colorChange", $(this).scrollTop() > $nav.height());
-			})
-		})
-</script>
-
-<!-- GOOGLE MAPS SCRIPT -->
-
-<!-- <script type="text/javascript">
-	$( document ).ready( function() {
-
-		$('body').noisy({
-		    intensity: 0.2,
-		    size: 200,
-		    opacity: 0.28,
-		    randomColors: false, // true by default
-		    color: '#000000'
+			});
 		});
-		  
-			//Google Maps JS
-			//Set Map
-			function initialize() {
-					var myLatlng = new google.maps.LatLng(53.3333,-3.08333);
-					var imagePath = 'http://m.schuepfen.ch/icons/helveticons/black/60/Pin-location.png'
-					var mapOptions = {
-						zoom: 11,
-						center: myLatlng,
-						mapTypeId: google.maps.MapTypeId.ROADMAP
-					}
-
-				var map = new google.maps.Map(document.getElementById('map'), mapOptions);
-				//Callout Content
-				var contentString = 'Some address here..';
-				//Set window width + content
-				var infowindow = new google.maps.InfoWindow({
-					content: contentString,
-					maxWidth: 500
-				});
-
-				//Add Marker
-				var marker = new google.maps.Marker({
-					position: myLatlng,
-					map: map,
-					icon: imagePath,
-					title: 'image title'
-				});
-
-				google.maps.event.addListener(marker, 'click', function() {
-					infowindow.open(map,marker);
-				});
-
-				//Resize Function
-				google.maps.event.addDomListener(window, "resize", function() {
-					var center = map.getCenter();
-					google.maps.event.trigger(map, "resize");
-					map.setCenter(center);
-				});
-			}
-
-			google.maps.event.addDomListener(window, 'load', initialize);
-
-	});
-</script> -->
+</script>
 
 </body>
 </html>
