--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -44,7 +44,7 @@
 		<!-- JUMBOTRON -->
 		<div class="jumbotron jumbotron-fluid" style="padding-top: 30px;">
 			<div class="container-fluid" style="margin-bottom: 50px;">
-				<div class="row">
+				<div class="row" style="margin-top: 40px;">
 					<div class="col-6" style="padding-left: 62px;">
 						<h1 id="hackathonTitle">AI HACKATHON</h1>
 						<div id="app">
@@ -53,7 +53,8 @@
 
 						<div>
 							<div id="cohost">
-								An initiative by Tata Motors and Symbiosis Center for Applied Artificial Intelligence, a constituent of Symbiosis Institute of Technology
+								<p style="font-size: 30px;"><strong>An initiative by</strong></p> 
+								<p style="font-size: 22px;">Tata Motors and Symbiosis Center for Applied Artificial Intelligence, a constituent of Symbiosis Institute of Technology</p>
 							</div>
 							<!-- div style="display: flex; margin-top: 10px;">
 								<div style="margin-top: 15px;">
@@ -82,12 +83,12 @@
 									</a>
 								</div>
 							</div> -->
-							<a href="{% url 'registration' %}" class="registerBtn">Register Now (It's Free)</a>
+							<a href="{% url 'registration' %}" class="registerBtn" data-hover="ITS FREE!!"><span>Register Now (It's Free)</span></a>
 						</div>
 
 					</div>
 					<div class="col-6 img-div">
-						<img src="../../static/webapp/imgs/LaptopLanding.svg">
+						<img src="{% static 'webapp/imgs/LaptopLanding.svg' %}">
 					</div>
 				</div>
 			</div>
@@ -120,22 +121,22 @@
 			<div class="container" style="margin-top: 15px;">
 				<div class="row text-center">
 					<div class="col-3">
-						<img src="../../static/webapp/imgs/idea.svg" id="participateImage">
+						<img src="{% static 'webapp/imgs/idea.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Get Inspired</h4>
 						<p id="participateInfo">Code with the best developers and designers from all around the country.</p>
 					</div>
 					<div class="col-3">
-						<img src="../../static/webapp/imgs/boss.svg" id="participateImage">
+						<img src="{% static 'webapp/imgs/boss.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Meet New Faces</h4>
 						<p id="participateInfo">Interact with super creative minds and increase your network.</p>
 					</div>
 					<div class="col-3">
-						<img src="../../static/webapp/imgs/data.svg" id="participateImage">
+						<img src="{% static 'webapp/imgs/data.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Latest Tech</h4>
 						<p id="participateInfo">Get priceless insights from eminent speakers and mentors from one of the leading companies and startups in the space.</p>
 					</div>
 					<div class="col-3">
-						<img src="../../static/webapp/imgs/gold-medal.svg" id="participateImage">
+						<img src="{% static 'webapp/imgs/gold-medal.svg' %}" id="participateImage">
 						<h4 id="participateTitle">Prizes To Be Won</h4>
 						<p id="participateInfo">Amazing cash prizes upto Rs 1,50,000* to be won and a lifetime opportunity to incubate your startup with SCEI ( Symbiosis Centre for Entrepreneurship & Innovation).</p>
 					</div>
@@ -160,7 +161,7 @@
 						<a href="https://www.tata.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="../../static/webapp/imgs/Tata_Logo2.svg" id="organizerImage" style="margin-left: 100px;">
+							  	<img src="{% static 'webapp/imgs/TataLogo.svg' %}" id="organizerImage" style="margin-left: 60px;">
 							    <p class="card-text" id="card-text-info"> Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 							  </div>
 							</div>
@@ -170,7 +171,7 @@
 						<a href="https://www.tatamotors.com/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							  	<img src="../../static/webapp/imgs/TataMotorsLogo.png" id="organizerImage" style="margin-left: 25px;">
+							  	<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" id="organizerImage" style="margin-left: 25px;">
 							    <p class="card-text" id="card-text-info">Tata Motors Limited, a USD 45 billion organisation, is a leading global automobile manufacturer with a portfolio that covers a wide range of cars, SUVs, buses, trucks, pickups and defence vehicles. Global Delivery Centre is the captive shared services centre for TML Group Companies focused on bringing digital transformation.</p>
 							    <img src="../../static/webapp/imgs/digital_exp.png" style="height: 80px; position: absolute; bottom: 0; right: 0;">
 							  </div>
@@ -181,7 +182,7 @@
 						<a href="https://www.sitpune.edu.in/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							    <img src="../../static/webapp/imgs/SIT_Logo_new.png" id="participateImage" style="height: 60px; margin-bottom: 32px;">
+							    <img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" id="participateImage" style="height: 60px; margin-bottom: 32px;">
 							    <p class="card-text" id="card-text-info">Symbiosis Institute of Technology, a constituent of Symbiosis International University was established in the year, 2008 and currently offers B. Tech programmes in Civil Engineering, Computer Science and Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering.</p>
 							  </div>
 							</div>
@@ -191,7 +192,7 @@
 						<a href="https://www.sitpune.edu.in/">
 							<div class="card custom-card" style="height: 440px">
 							  <div class="card-body">
-							    <img src="../../static/webapp/imgs/symbiosislogo.png" id="participateImage" style="margin-left: 90px; margin-bottom: 16px;">
+							    <img src="{% static 'webapp/imgs/symbiosislogo.png' %}" id="participateImage" style="margin-left: 90px; margin-bottom: 16px;">
 							    <p class="card-text" id="card-text-info">Symbiosis Center for Applied Artificial Intelligence (SCAAI), a constituent of Symbiosis Institute of Technology was established to develop novel techniques in various domains of AI, application of these algorithms to a variety of problems specifically focusing in two domains namely healthcare and robotics and translation of the above two aims into novel product ideas for start-up industries and opportunity generation for consultancy to industry. </p>
 							  </div>
 							</div>
@@ -210,16 +211,16 @@
 			<div class="container" style="margin-top: 15px;">
 				<div class="row text-center justify-content-center">
 					<div class="col-4">
-						<img src="../../static/webapp/imgs/teamwork.svg" id="eligibilityImage">
+						<img src="{% static 'webapp/imgs/teamwork.svg' %}" id="eligibilityImage">
 						<h4 id="participateTitle">Individuals</h4>
 						<p id="participateInfo" style="justify-content: center;">University students specializing in AI</p>
 						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
 					</div>
 					<div class="col-2" style="margin-top: 56px">
-						<img src="../../static/webapp/imgs/Line.svg" style="height: 240px;">
+						<img src="{% static 'webapp/imgs/Line.svg' %}" style="height: 240px;">
 					</div>
 					<div class="col-4">
-						<img src="../../static/webapp/imgs/flat.svg" id="eligibilityImage">
+						<img src="{% static 'webapp/imgs/flat.svg' %}" id="eligibilityImage">
 						<h4 id="participateTitle">Startups</h4>
 						<p id="participateInfo" style="justify-content: center;">Startups less than 2 years old</p>
 						<p id="participateInfo" style="justify-content: center;">Team Size: 2 to 4 members (Including Mentor)</p>
@@ -237,7 +238,7 @@
 			<div class="container">
 				<div class="row text-center justify-content-between">
 					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div class="judgesImage" style="position: relative;">
+						<div id="ketanImage" style="position: relative;">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Ketan Kotecha</p>
@@ -247,7 +248,7 @@
 						</div>
 					</div>
 					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div class="judgesImage" style="position: relative;">
+						<div id="pradeepImage" style="position: relative;">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Pradeep Chatterjee</p>
@@ -257,7 +258,7 @@
 						</div>
 					</div>
 					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div class="judgesImage" style="position: relative;">
+						<div id="sureshImage" style="position: relative;">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Suresh P</p>
@@ -267,7 +268,7 @@
 						</div>
 					</div>
 					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div class="judgesImage" style="position: relative;">
+						<div id="raheeImage" style="position: relative;">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Rahee Walambe</p>
@@ -604,8 +605,8 @@
 				var $link = $(".nav-link");
 				$nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
 				$link.toggleClass("colorChange", $(this).scrollTop() > $nav.height());
-			})
-		})
+			});
+		});
 </script>
 
 <!-- TYPEWRITER JS -->
