--- a/hackathon/webapp/templates/webapp/navbar.html
+++ b/hackathon/webapp/templates/webapp/navbar.html
@@ -1,21 +1,22 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
 		<div class="logoBar">
 			<div class="container-fluid">
 				<div class="row" style="justify-content: space-around; padding-top: 10px;">
 					<div class="col-4" style="text-align: start;">
 						<a href="https://www.tatamotors.com/">
-							<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">							
+							<img src="{% static 'webapp/imgs/TataMotorsLogo.svg' %}" style="height: 50px; margin-right: 20px;">							
 						</a>
 					</div>
 					<div class="col-4" style="text-align: center;">
 						<a href="https://www.sitpune.edu.in/">
 							<!-- <img src="../../static/webapp/imgs/logo-3.png" style="height: 50px;"> -->
-							<img src="../../static/webapp/imgs/SIT_Logo_new.png" style="height: 50px;">
+							<img src="{% static 'webapp/imgs/SIT_Logo_new.png' %}" style="height: 50px;">
 						</a>
 					</div>
 					<div class="col-4" style="text-align: end;">
 						<a href="https://www.tata.com/">
-							<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+							<img src="{% static 'webapp/imgs/TataLogo.svg' %}" style="height: 50px; margin-right: 20px;">
 						</a>
 					</div>
 				</div>
